fix layout and add download link

--- a/index.html
+++ b/index.html
@@ -41,8 +41,13 @@
 
                         <hr>
                         <p class="text-center">
+                            <a href="https://github.com/QUOVADIS/gui" class="btn btn-danger btn-lg">Download Quo Vadis GUI</a>
+                        </p>
+                        <hr>
+                        <p class="text-center">
                             All this GUI is made as an <a href="http://getbootstrap.com/">Bootstrap</a> add-on. Using here the version 3.1.1.
                         </p>
+
                         <hr>
 
                         <section class="gui-section">
@@ -457,7 +462,7 @@
                                 </div>
                                 <div class="col-xs-8">
                                     <h2 class="gui-sub-heading">Desktop</h2>
-                                    <section id="top-carousel-example" class="carousel slide top-carousel" data-ride="carousel">
+                                    <div id="top-carousel-example" class="carousel slide top-carousel" data-ride="carousel">
                                         <div class="carousel-inner">
                                             <div class="item" style="background-image:url('http://placehold.it/75&amp;text=1')" data-index="1">
                                                 <h1 class="top-carousel-heading">Collection <strong>Le Routard</strong></h1>
@@ -684,10 +689,9 @@
                                                 <div class="progress"></div>
                                             </div>
                                         </div>
-                                        </div>
-                                    </section>
+                                    </div>
 
-                                    <section id="bottom-carousel-example" class="carousel slide bottom-carousel">
+                                    <div id="bottom-carousel-example" class="carousel slide bottom-carousel">
                                         <ol class="carousel-indicators">
                                             <li data-target="#bottom-carousel-example" data-slide-to="0" class="active"></li>
                                             <li data-target="#bottom-carousel-example" data-slide-to="1" class="is-active"></li>
@@ -878,7 +882,8 @@
                                         <a class="left carousel-control disabled" href="#bottom-carousel-example" data-slide="prev"><i class="fa fa-angle-left"></i></a>
 
                                         <a class="right carousel-control" href="#bottom-carousel-example" data-slide="next"><i class="fa fa-angle-right"></i></a>
-                                    </section>
+                                    </div>
+                                    </div>
 
                                     <section class="gui-section">
                                         <h1 class="gui-heading">Tabcordion</h1>
