add AvenirNext Typography

--- a/index.html
+++ b/index.html
@@ -22,6 +22,50 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script src="vendor/elevatezoom/jquery.elevatezoom.js"></script>
+        <script type="text/javascript" src="http://fast.fonts.net/jsapi/fafd8c76-f349-4c38-80bb-b07946806a3f.js"></script>
+
+        <style>
+            @font-face {
+                font-family:'AvenirNextLTW01-UltraLi';
+                font-family:'AvenirNextLTW01-UltraLt 721260';
+                font-family:'Avenir Next W01 Thin';
+                font-family:'AvenirNextW01-ThinItali';
+                font-family:'Avenir Next W01 Light';
+                font-family:'AvenirNextW01-LightItal';
+                font-family:'AvenirNextLTW01-Regular';
+                font-family:'AvenirNextLTW01-Italic';
+                font-family:'AvenirNextLTW01-Medium';
+                font-family:'AvenirNextLTW01-MediumI 721278';
+                font-family:'Avenir Next LT W01 Demi';
+                font-family:'AvenirNextLTW01-DemiIta';
+                font-family:'Avenir Next LT W01 Bold';
+                font-family:'AvenirNextLTW01-BoldIta';
+                font-family:'AvenirNextLTW01-Heavy';
+                font-family:'AvenirNextLTW01-HeavyIt 721290';
+                font-family:'AvenirNextLTW01-UltraLt 721293';
+                font-family:'AvenirNextLTW01-UltLtCn 721296';
+                font-family:'AvenirNextLTW01-Condens 721299';
+                font-family:'AvenirNextLTW01-Condens 721302';
+                font-family:'AvenirNextLTW01-MediumC 721311';
+                font-family:'AvenirNextLTW01-MediumC 721314';
+                font-family:'AvenirNextLTW01-DemiCn';
+                font-family:'AvenirNextLTW01-DemiCnI 721308';
+                font-family:'AvenirNextLTW01-BoldCn';
+                font-family:'AvenirNextLTW01-BoldCnI 721320';
+                font-family:'AvenirNextLTW01-HeavyCn 721323';
+                font-family:'AvenirNextLTW01-HeavyCn 721326';
+                font-family:'Avenir Next W01 Cn Thin';
+                font-family:'AvenirNextW01-CnThinIta';
+                font-family:'AvenirNextW01-CnLight';
+                font-family:'AvenirNextW01-CnLightIt';
+            }
+
+            #gui-title {
+                font-family: "AvenirNextLTW01-Heavy", "Helvetica Neue", Helvetica, Arial, sans-serif;
+            }
+
+
+        </style>
     </head>
     <body>
 
@@ -31,7 +75,7 @@
                     <header class="text-center">
                         <img src="images/gui/logo.png" alt="" height="75">
                     </header>
-                    <h1 class="gui-title text-center">
+                    <h1 class="gui-title text-center" id="gui-title">
                         GUI
                     </h1>
                     <footer class="text-center">
