change gui title font weight

--- a/index.html
+++ b/index.html
@@ -43,28 +43,11 @@
                 font-family:'AvenirNextLTW01-Heavy';
                 font-family:'AvenirNextLTW01-HeavyIt 721290';
                 font-family:'AvenirNextLTW01-UltraLt 721293';
-                font-family:'AvenirNextLTW01-UltLtCn 721296';
-                font-family:'AvenirNextLTW01-Condens 721299';
-                font-family:'AvenirNextLTW01-Condens 721302';
-                font-family:'AvenirNextLTW01-MediumC 721311';
-                font-family:'AvenirNextLTW01-MediumC 721314';
-                font-family:'AvenirNextLTW01-DemiCn';
-                font-family:'AvenirNextLTW01-DemiCnI 721308';
-                font-family:'AvenirNextLTW01-BoldCn';
-                font-family:'AvenirNextLTW01-BoldCnI 721320';
-                font-family:'AvenirNextLTW01-HeavyCn 721323';
-                font-family:'AvenirNextLTW01-HeavyCn 721326';
-                font-family:'Avenir Next W01 Cn Thin';
-                font-family:'AvenirNextW01-CnThinIta';
-                font-family:'AvenirNextW01-CnLight';
-                font-family:'AvenirNextW01-CnLightIt';
             }
 
             #gui-title {
-                font-family: "AvenirNextLTW01-Heavy", "Helvetica Neue", Helvetica, Arial, sans-serif;
+                font-family: "AvenirNextLTW01-Regular", "Helvetica Neue", Helvetica, Arial, sans-serif;
             }
-
-
         </style>
     </head>
     <body>
